apps/homelab-api/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: homelab-api
  labels:
    app.kubernetes.io/name: homelab-api
