apps/homelab-api/base/networkpolicy-allow-ingress-from-monitoring.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-from-monitoring
  namespace: homelab-api
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: homelab-api
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
      ports:
        - protocol: TCP
          port: 80
        - protocol: TCP
          port: 8000
